--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.3.1",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "express": "^4.19.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
