--- a/Server/package.json
+++ b/Server/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@google/generative-ai": "^0.3.1",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.0",
+    "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.379"
