--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
 GOOGLEGENERAtTIVEAI_API_KEY = AIzaSyBXCeOvb-LgnC0xoJbJsHJI9dQU-UoFM74
+X_RAPIDAPI_KEY = d2feb78d0dmshadc78adb748b5f1p1e1df1jsn5e0e97b067a2
+X_RAPIDAPI_HOST =jsearch.p.rapidapi.com
